--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ Django==4.2.9
 django-bootstrap-v5==1.0.11
 pillow==10.2.0
 virtualenv==20.25.0
+backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.8"
